chore: clean book sync internals