@@ -8,17 +8,14 @@ import lombok.extern.slf4j.Slf4j;
 import org.booklore.config.JacksonConfig;
 import org.booklore.config.security.service.AuthenticationService;
 import org.booklore.config.security.userdetails.OpdsUserDetails;
-import org.booklore.exception.ApiError;
 import org.booklore.mapper.komga.KomgaMapper;
-import org.booklore.model.dto.BookLoreUser;
 import org.booklore.model.dto.komga.KomgaBookDto;
 import org.booklore.model.dto.komga.KomgaLibraryDto;
 import org.booklore.model.dto.komga.KomgaPageableDto;
 import org.booklore.model.dto.komga.KomgaSeriesDto;
-import org.booklore.model.entity.BookEntity;
-import org.booklore.model.entity.BookLoreUserEntity;
 import org.booklore.service.book.BookService;
 import org.booklore.service.komga.KomgaService;
+import org.booklore.service.opds.OpdsBookService;
 import org.booklore.service.opds.OpdsUserV2Service;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.core.io.Resource;
@@ -42,6 +39,7 @@ public class KomgaController {
 
     private final KomgaService komgaService;
     private final BookService bookService;
+    private final OpdsBookService opdsBookService;
     private final AuthenticationService authenticationService;
     private final OpdsUserV2Service opdsUserV2Service;
     private final KomgaMapper komgaMapper;
@@ -60,19 +58,6 @@ public class KomgaController {
         }
     }
 
-    private void validateBookContentAccess(Long bookId) {
-        BookLoreUser user = authenticationService.getAuthenticatedUser();
-
-        if (user == null) {
-            throw ApiError.FORBIDDEN.createException("Authentication required");
-        }
-
-        if (!komgaService.validateBookContentAccess(user, bookId)) {
-            throw ApiError.BOOK_NOT_FOUND.createException(bookId);
-        }
-    }
-
-    // ==================== Libraries ====================
     
     @Operation(summary = "List all libraries")
     @GetMapping("/v1/libraries")
@@ -88,7 +73,6 @@ public class KomgaController {
         return writeJson(komgaService.getLibraryById(libraryId));
     }
 
-    // ==================== Series ====================
     
     @Operation(summary = "List series")
     @GetMapping("/v1/series")
@@ -127,14 +111,13 @@ public class KomgaController {
             return ResponseEntity.notFound().build();
         }
         
-        Long firstBookId = Long.parseLong(books.getContent().getFirst().getId());
+        Long firstBookId = Long.parseLong(books.getContent().get(0).getId());
         Resource coverImage = bookService.getBookThumbnail(firstBookId);
         return ResponseEntity.ok()
                 .header("Content-Type", "image/jpeg")
                 .body(coverImage);
     }
 
-    // ==================== Books ====================
     
     @Operation(summary = "List books")
     @GetMapping("/v1/books")
@@ -166,8 +149,7 @@ public class KomgaController {
             @Parameter(description = "Book ID") @PathVariable Long bookId,
             @Parameter(description = "Page number") @PathVariable Integer pageNumber,
             @Parameter(description = "Convert image format (e.g., 'png')") @RequestParam(required = false) String convert) {
-        validateBookContentAccess(bookId);
-
+        opdsBookService.validateBookContentAccess(bookId, getOpdsUserId());
         try {
             boolean convertToPng = "png".equalsIgnoreCase(convert);
             Resource pageImage = komgaService.getBookPageImage(bookId, pageNumber, convertToPng);
@@ -187,8 +169,7 @@ public class KomgaController {
     @GetMapping("/v1/books/{bookId}/file")
     public ResponseEntity<Resource> downloadBook(
             @Parameter(description = "Book ID") @PathVariable Long bookId) {
-        validateBookContentAccess(bookId);
-
+        opdsBookService.validateBookContentAccess(bookId, getOpdsUserId());
         return bookService.downloadBook(bookId);
     }
 
@@ -196,15 +177,13 @@ public class KomgaController {
     @GetMapping("/v1/books/{bookId}/thumbnail")
     public ResponseEntity<Resource> getBookThumbnail(
             @Parameter(description = "Book ID") @PathVariable Long bookId) {
-        validateBookContentAccess(bookId);
-
+        opdsBookService.validateBookContentAccess(bookId, getOpdsUserId());
         Resource coverImage = bookService.getBookThumbnail(bookId);
         return ResponseEntity.ok()
                 .header("Content-Type", "image/jpeg")
                 .body(coverImage);
     }
 
-    // ==================== Users ====================
     
     @Operation(summary = "Get current user details")
     @GetMapping("/v2/users/me")
@@ -223,7 +202,6 @@ public class KomgaController {
         return writeJson(komgaMapper.toKomgaUserDto(opdsUser));
     }
     
-    // ==================== Collections ====================
     
     @Operation(summary = "List collections")
     @GetMapping("/v1/collections")
@@ -232,5 +210,12 @@ public class KomgaController {
             @Parameter(description = "Page size") @RequestParam(defaultValue = "20") int size,
             @Parameter(description = "Return all collections without paging") @RequestParam(defaultValue = "false") boolean unpaged) {
         return writeJson(komgaService.getCollections(page, size, unpaged));
+    }
+
+    private Long getOpdsUserId() {
+        OpdsUserDetails details = authenticationService.getOpdsUser();
+        return details != null && details.getOpdsUserV2() != null
+                ? details.getOpdsUserV2().getUserId()
+                : null;
     }
 }
