@@ -409,12 +409,12 @@ public class ReadingSessionService {
                 .mapToDouble(Double::doubleValue).average().orElse(0);
         boolean finishBurst = lastQuarterAvg > firstThreeQuartersAvg;
 
-        double accelScore = Math.clamp((sessionAcceleration + 50) / 100.0, 0.0, 1.0);
-        double gapScore = Math.clamp((-gapReduction + 50) / 100.0, 0.0, 1.0);
+        double accelScore = Math.min(1.0, Math.max(0.0, (sessionAcceleration + 50) / 100.0));
+        double gapScore = Math.min(1.0, Math.max(0.0, (-gapReduction + 50) / 100.0));
         double burstScore = finishBurst ? 1.0 : 0.0;
 
         int gripScore = (int) Math.round(
-                Math.clamp(accelScore * 35 + gapScore * 35 + burstScore * 30, 0, 100));
+                Math.min(100, Math.max(0, accelScore * 35 + gapScore * 35 + burstScore * 30)));
 
         double avgDuration = durations.stream().mapToDouble(Double::doubleValue).average().orElse(0);
 
@@ -679,9 +679,7 @@ public class ReadingSessionService {
         return (n * sumXY - sumX * sumY) / denominator;
     }
 
-    // ========================================================================
     // Listening (audiobook) stats
-    // ========================================================================
 
     public List<ListeningHeatmapResponse> getListeningHeatmapForMonth(int year, int month) {
         Long userId = authenticationService.getAuthenticatedUser().getId();
