@@ -6,6 +6,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.text.similarity.FuzzyScore;
 
 import java.util.*;
+import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -169,8 +170,8 @@ public class BookFileGroupingUtils {
                 continue;
             }
 
-            String fileSubPath = filesInFolder.getFirst().getFileSubPath();
-            Long libraryPathId = filesInFolder.getFirst().getLibraryPathEntity().getId();
+            String fileSubPath = filesInFolder.get(0).getFileSubPath();
+            Long libraryPathId = filesInFolder.get(0).getLibraryPathEntity().getId();
 
             // Root-level files: use exact grouping
             if (fileSubPath == null || fileSubPath.isEmpty()) {
@@ -361,7 +362,7 @@ public class BookFileGroupingUtils {
         Map<String, List<LibraryFile>> result = new LinkedHashMap<>();
 
         if (files.size() == 1) {
-            LibraryFile file = files.getFirst();
+            LibraryFile file = files.get(0);
             String key = libraryPathId + ":" + fileSubPath + ":single:" + extractGroupingKey(file.getFileName());
             result.put(key, new ArrayList<>(List.of(file)));
             return result;
@@ -412,7 +413,7 @@ public class BookFileGroupingUtils {
             List<LibraryFile> clusterFiles = cluster.getValue();
             // Use the first file's key as the group key
             String groupKey = libraryPathId + ":" + fileSubPath + ":cluster:" +
-                    extractGroupingKey(clusterFiles.getFirst().getFileName());
+                    extractGroupingKey(clusterFiles.get(0).getFileName());
             result.put(groupKey, clusterFiles);
 
             if (clusterFiles.size() > 1) {
